2010-12-29  Zhe Su  <suzhe@chromium.org>

Reviewed by Eric Seidel.

        Remove entry for editing/input/ime-composition-clearpreedit.html test.
        https://bugs.webkit.org/show_bug.cgi?id=51693

        * platform/chromium/test_expectations.txt:
2010-12-29  Zhe Su  <suzhe@chromium.org>

        Reviewed by Eric Seidel.

        Fix editing/input/ime-composition-clearpreedit.html test in chromium
        by removing the line "editor->confirmComposition(text);" from
        WebFrameImpl::setMarkedText() method, because that line will insert the
        text into the focused node, which is apparently wrong.

        https://bugs.webkit.org/show_bug.cgi?id=51693

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::setMarkedText):

git-svn-id: svn://svn.chromium.org/blink/trunk@74735 bbb929c8-8fbe-4397-9dbb-9b2b20218538