third_party/WebKit/WebKit/chromium/src/WebFrameImpl.cpp
@@ -1082,8 +1082,6 @@ void WebFrameImpl::setMarkedText(
 {
     Editor* editor = frame()->editor();
 
-    editor->confirmComposition(text);
-
     Vector<CompositionUnderline> decorations;
     editor->setComposition(text, decorations, location, length);
 }
